Fix inputbox z-index issue #21

--- a/src/chat/root/style.css
+++ b/src/chat/root/style.css
@@ -12,4 +12,5 @@ root {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
 }
